<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bari Vara</string>
    <string name="app_name_bn">বাড়ি ভাড়া</string>
    <string name="app_name2">GHORAMI</string>
    <string name="app_name_bn2">ঘরামি</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="bed">bed</string>
    <string name="bath">bath</string>
    <string name="floor">floor</string>
    <string name="size">size</string>
    <string name="sinfo">note</string>
    <string name="home_type">home type</string>
    <string name="rent_type">rental type</string>
    <string-array name="facility">
        <item>Parking/Garage</item>
        <item>Indoor Games</item>
        <item>Swimming Pool</item>
        <item>Internet/Wifi</item>
        <item>Gym/Fitness Centre</item>
        <item>Laundry</item>
    </string-array>
    <string name="title">title</string>
    <string-array name="rent">
        <item>1500–2000</item>
        <item>2000–4000</item>
        <item>5000–7000</item>
        <item>8000–10000</item>
        <item>11000–15000</item>
        <item>16000–20000</item>
        <item>21000–25000</item>
        <item>26000–40000</item>
        <item>40000-up</item>
    </string-array>
    <string name="advance">advance</string>
    <string name="utility">utility</string>
    <string name="owner"> Owner Name </string>
    <string name="phone">Phone</string>
    <string-array name="location">
        <item>Dhaka</item>
        <item>Sylhet</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Barishal</item>
        <item>Rajshahi</item>
        <item>Khulna</item>
    </string-array>
    <string name="thana">thana</string>
    <string name="home_details">home details</string>
    <string name="payment_details">Payment Details</string>
    <string name="home_location">property location</string>
    <string name="home_sinfo">summery</string>
    <string name="Normal">general</string>
    <string name="Satellite">satellite</string>
    <string name="Terrain">terrain</string>
    <string name="Hybrid">hybrid</string>
    <string name="Type">Type: </string>
    <string name="Bachelor">Bachelor</string>
    <string name="Sfamily">Small family</string>
    <string name="Family">Family</string>
    <string name="Bhostel">Boys Hostel</string>
    <string name="Ghostel">Girls Hostel</string>
    <string name="wmHostel">Working Women Hostel</string>
    <string name="Others">Others</string>
    <string name="Bachelork">Bachelor</string>
    <string name="Sfamilyk">Small family</string>
    <string name="Familyk">Family</string>
    <string name="Bhostelk">Boys</string>
    <string name="Ghostelk">Girls</string>
    <string name="wmHostelk">Women</string>
    <string name="Othersk">Others</string>
    <string name="Flat">Flat</string>
    <string name="Apartment">Apartment</string>
    <string name="Concord">Concord</string>
    <string name="Commercial">Commercial</string>
    <string name="Parking">Parking</string>
    <string name="Spool">Swimming pool</string>
    <string name="Gym">Fitness Center</string>
    <string name="GasSupply">Gas Supply</string>
    <string name="WaterS">24/7 Electricity</string>
    <string name="GeneratorS">Generatoe</string>
    <string name="Wifi">Internet/Wifi</string>
    <string name="Lift">Lift</string>
    <string name="RoadLane">House no, Road no.</string>
    <string name="UpdateData">Update Information</string>
    <string name="PostHome">Post a home</string>
    <string name="PaymentD">Rent and other cost</string>
    <string name="Logout">Logout</string>
    <string name="Offer">Offer</string>
    <string name="Home">Home</string>
    <string name="user_offer">Your offer will come sooon.</string>
    <string name="phonev">Verify Phone</string>
    <string name="mailv">Verify Email</string>
    <string name="locationv">Verify Address</string>
    <string name="paymentv">Verify Payment Method</string>
    <string name="videov">Verify Video</string>
    <string name="verifyU">Verify yourself</string>
    <string name="verifyrq">Your are not a verified member</string>
    <string name="verifyok">Your are a verified member</string>
    <string name="premium">Be a premium member</string>
    <string name="premiumok">Your are a Premium Member</string>
    <string name="downloadLink">https://play.google.com/store/apps/details?id=com.ghorami.rongpencill.barivara</string>
    <string name="appHash">#barivara</string>
    <string name="appSlogan">share space earn money</string>
    <string name="myActivity">myActivity</string>
    <string name="model">Model</string>
    <string name="version">Version</string>
    <string name="versionSerial">37.10.e.20</string>
    <string name="vRelease">37.10.e.20</string>
    <string name="mailAddress">barivara01@gmail.com</string>
    <string name="bodyText">Please leave your feedback here.
Please do not edit the information below:
</string>
    <string name="aboutDev">About Developer</string>
    <string name="devName">Farzana Munia</string>
    <string name="devPhone">+8801686716878</string>
    <string name="devEmail">barivara01@gmail.com</string>
    <string name="devInstitue">Institute of Information Technology (IIT)
   Jahangirnagar University</string>
    <string name="devFacebook">barivara</string>
    <string name="devSkype">barivara</string>
    <string name="MapView">Map View</string>
    <string name="ListView">List View</string>
    <string name="adCategory">Ad type</string>
    <string name="adRent">All Rent</string>
    <string name="adSell">Sell</string>
    <string name="sellType">Sell type-</string>
    <string name="Price">Price</string>
    <string name="PaymentSell">Sell Price</string>
    <string name="Bari">Home/house</string>
    <string name="homeSpace">Land for home</string>
    <string name="OfficeSpace">Office Space</string>
    <string name="CommercialSpace">Commercial Space/Shopping mall</string>
    <string name="FarmSpace">Farm</string>
    <string name="PaddyField">Paddy field</string>
    <string name="GardenField">Garden/garden land</string>
    <string name="Dokan">Shop/Stall</string>
    <string name="Factory">Factory</string>
    <string name="Sell">Sell</string>
    <string name="Foode">With Food</string>
    <string name="NoFoode">Without Food</string>
    <string name="Food">With food</string>
    <string name="NoFood">Without food</string>
    <string name="search">search</string>
    <string name="call">Call</string>
    <string name="wMobile">Mobile Number</string>
    <string name="city">District</string>
    <string name="address">Address</string>
    <string name="fullName">Your Name</string>
    <string name="mobileNumber"> Mobile Number</string>
    <string name="email">Email</string>
    <string name="Profession">Your Profession</string>
    <string name="Company">Company/Institute Name</string>
    <string name="NID">NID/Passport No</string>
    <string name="Nationality">Nationality</string>
    <string name="cityk">District</string>
    <string name="addressk">Address</string>
    <string name="referId">Refer Code</string>
    <string name="passowrd">Password</string>
    <string name="confirmPassword">Confirm your password</string>
    <string name="signUp">Signup</string>
    <string name="login">Login</string>
    <string name="show_pwd">See password</string>
    <string name="hide_pwd">Hide password</string>
    <string name="save_pwd">Save password</string>
    <string name="unsave_pwd">Remove password</string>
    <string name="terms_conditions">if you agree with condition. Check this box.</string>
    <string name="already_user">Are you already registered. login here</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="forgot">Forget your password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">If your are not member, register here.</string>
    <string name="submit">Submit</string>
    <string name="back">Back</string>
    <string name="app_label"> Search for Rent </string>
    <string name="search_hint">Search Home</string>
    <string name="search_view">Enter search</string>
    <string name="fullNamen">আপনার নাম</string>
    <string name="mobileNumbern">মোবাইল নম্বর</string>
    <string name="confirmPasswordn">পাসওয়ার্ড নিশ্চিত করুন</string>
    <string name="terms_conditionsn">শর্তাবলীর সাথে একমত হলে এখানে ক্লিক করুন। </string>
    <string name="signUpn">নিবন্ধন করুন</string>
    <string name="referIdn">Refer Code</string>
    <string name="passowrdn">আপনার পাসওয়ার্ড </string>
    <string name="loginn">প্রবেশ</string>
    <string name="Professionn">আপনার পেশা (স্টুডেন্ট/চাকরিজীবি)</string>
    <string name="Companyn">প্রতিষ্ঠানের নাম (কোম্পানি/বিশ্ববিদ্যালয়/কলেজ)</string>
    <string name="emailn">ইমেইল </string>
    <string name="Nationalityn">জাতীয়তা</string>
    <string name="NIDn">এনআইডি/পাসপোর্ট নং</string>
    <string name="ybalance">Your balance</string>
    <string name="buyConnect">buy new connect</string>
    <string name="earnConnect">earn new money</string>
    <string name="tPoint">today\'s point</string>
    <string name="rewardPoint">Reward Points</string>
    <string name="withdrawMoney">Withdraw Money</string>
    <string name="tearn">total earning</string>
    <string name="appdue">app due</string>
    <string name="treview">total review</string>
    <string name="lsell">lifetime sell earning</string>
    <string name="lrent">lifetime rent</string>
    <string name="referralpoint">your referral point</string>
    <string name="getreport">get your report</string>
    <string name="senddue">send due money</string>
    <string name="InsertPicture">Upload Picture</string>
    <string name="adQuantity">Your post quantity</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="searchAnything">Write anything for search</string>
    <string name="totalPay">Total Pay</string>
    <string name="sFamily">Family</string>
    <string name="Student">Student</string>
    <string name="Girls">Girls</string>
    <string name="sStudent">Boys Hostel</string>
    <string name="Woment">Women Hostel</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="slide_1_title">বাড়ি ভাড়া তে স্বাগতম</string>
    <string name="slide_1_desc">বাসা খুঁজে নিন সহজেই</string>
    <string name="slide_3_title">লাইভ চ্যাট</string>
    <string name="slide_3_desc">সরাসরি যোগাযোগ করুন লাইভ চ্যাটবট দিয়ে</string>
    <string name="slide_2_title">মেয়েদের বিশেষ ফিচার</string>
    <string name="slide_2_desc">খুঁজে নিন সাধ্যের মধ্যে নিরাপদ বাসা</string>
    <string name="slide_6_title">টাকা কামান</string>
    <string name="slide_6_desc">বিজ্ঞাপন দেন আর টাকা কামান</string>
    <string name="slide_4_title">বেঁচা-কেনা করুন</string>
    <string name="slide_4_desc">খুঁজে নিন প্রকৃত ক্রেতা</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_about">About</string>
    <string name="sell_type">Sell Type</string>
    <string name="facebook_app_id">barivara</string>
    <string name="facebook_app_id_k">barivara</string>
    <string name="fb_login_protocol_scheme_k">barivara</string>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://barivara.com/.well-known/assetlinks.json\" }]</string>
</resources>